--- a/accueil.css
+++ b/accueil.css
@@ -13,14 +13,15 @@
     justify-content: space-between;
     align-items: center;
     width: 80%;
+    gap: 50px;
 }
 
 #presentation-logo{
-    max-width: 400px;
+    max-width: 500px;
 }
 
 #nathalie{
-    max-width: 500px;
+    max-width: 800px;
 }
 
 
@@ -38,10 +39,10 @@
 }
 
 #section1{
-    width: 90%;
+    width: 80%;
     flex-direction: row;
     gap: 50px;
-    margin: 80px 0;
+    margin: 200px 0;
 }
 
 #section2 {
@@ -49,32 +50,22 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 60px;
-    gap: 100PX;
+    padding: 30px;
+    gap: 30px;
     width: 80%;
+    margin: 150px;
 }
 
 #section2 section{
     display: flex;
     justify-content: center;
     align-items: center; 
+    width: 50%;
 }
 
-.articles{
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    flex-grow: 1;
-}
-#papillon{
-    max-width: 500px;
-    display: flex;
-    flex: 2;
-    flex-grow: 2;
-}
 
 #section3{
-    width: 60%;
+    width: 80%;
     box-shadow: none;
 }
 .sections-seance{
@@ -84,3 +75,16 @@
     align-items: center;
     gap: 20px;
 }
+
+#section-cabinet {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+}
+
+#cabinet{
+    max-width: 550px;
+}
+
