--- a/responsive.css
+++ b/responsive.css
@@ -80,28 +80,22 @@
         justify-content: center;
     }
     #carte{
-        max-width: 80%;
+        width: 95%;
     }
 }
 
 @media screen and (max-width:425px) {
-    #header-logo{
-        max-width: 80px;
-    }
     #header nav{
         gap: 12px;
     }
 
-    #header nav a{
-        font-size: 1em;
-    }
     #hero{
         border-radius: 0;
     }
     section{
         max-width: 100%;
-        margin: 5%;
-        padding: 20px;
+        margin: 2%;
+        padding: 15px;
     }
 
     #section3{
