--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ em {
 }
 
 footer {
-  width: 100%;
+  padding: 0 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -185,4 +185,5 @@ footer {
 
 footer p {
   color: #9d6faf;
+  text-align: center;
 }
